--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "debug": "nodemon --ignore coverage index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
     "migration": "node -e \"require('./__tests__/_utils').runMigration()\"",
-    "seed": "node -e \"require('./__tests__/_utils').runSeed()\""
+    "seed": "node -e \"require('./__tests__/_utils').runSeed()\"",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,7 @@
     "@hapi/boom": "^9.1.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-rescue": "^1.1.26",
     "joi": "^17.6.0",
     "mysql2": "^2.3.0"
@@ -42,7 +43,7 @@
     "jest": "^26.4.1",
     "mocha": "^8.4.0",
     "mysql-import": "^5.0.21",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.19",
     "nyc": "^15.1.0",
     "sinon": "^11.1.1",
     "supertest": "^6.2.2"
